fix(Tabs): tabs don't break on new line in vertical orientation
issue -  #1435

--- a/src/components/Tabs/MoreItems/TabsMoreItems.css
+++ b/src/components/Tabs/MoreItems/TabsMoreItems.css
@@ -12,6 +12,10 @@
     border: 1px solid var(--color-bg-border);
     border-radius: var(--control-radius);
     box-shadow: var(--shadow-modal);
+
+    /* Если текст будет переноситься на несколько строк,
+    не получится сразу правильно вычислить направление попапа и он будет скакать при открытии */
+    white-space: nowrap;
   }
 
   &-Item {
